erDiagram
    POSTS {
        uuid post_id PK
        int author_id
        string title
        text content
        int like_count
        int view_count
        datetime created_at
    }

    COMMENTS {
        uuid comment_id PK
        uuid post_id FK
        int user_id
        text comment_text
        datetime commented_at
    }

    LIKES {
        uuid like_id PK
        uuid post_id FK
        int user_id
        datetime liked_at
    }

    %% Связи:
    POSTS ||--|{ COMMENTS : "1 пост -> много комментариев"
    POSTS ||--|{ LIKES : "1 пост -> много лайков"

